# Antipaper

./: .env.example  .gitignore  AI_LOG_2026-07-18_2026-07-19.md  README.md  app.py  download_yolo_table_weights.py  message.txt  problem.txt  pyproject.toml  pytest.ini  render.yaml  requirement.txt  requirements-cuda.txt  requirements-eval.txt  requirements-linux.txt  requirements.txt  vercel.json
api/: index.py
backend/: HUNG_HANDOFF.md  __main__.py  cli.py  errors.py  history.py  llm.py  logging.py  main.py  orchestrator.py  related_documents.py  requirements.txt  schemas.py  service.py
docs/: ACCEPTANCE_TESTS.md  AI_COLLABORATION_LOG.md  API_CONTRACT.md  ARCHITECTURE.md  BUILD_PLAN_48H.md  DATA_MODEL.md  FLOW.md  FRONTEND_REQUIREMENTS.md  HAU_HANDOFF.md  HISTORY_BACKEND.md  ONE_PAGE_DECK.md  PRD.md  PRODUCT_REQUIREMENTS.md  PROJECT_PROGRESS.md  README.md  SECURITY.md  TASKS_HAU.md  TASKS_HUNG.md  TASKS_TUAN.md  TASKS_TUNG.md  TASKS_TUNG_ANH.md  TECHSTACK.md  TECH_STACK.md  TUAN_HANDOFF.md
evals/: __init__.py  adapters.py  dataset.py  metrics.py  run.py
evidence/: benchmark-smoke.json
frontend/: .env.local.example  .gitignore  README.md  components.json  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
scripts/: benchmark_cold.py  benchmark_ver1.py  check_hau_tasks.py  demo_meeting_ai.py  export_ai_log.ps1  package_backend.ps1  run_backend.ps1  smoke_test_paddle_ocr.py  smoke_test_yolo_table.py
src/: __init__.py  __main__.py  cli.py  main.py  schemas.py
tests/: conftest.py  (+28 more)
(+103 files in other folders)
