[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antipaper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100",
  "httpx>=0.25",
  "pydantic>=2.0",
  "PyMuPDF>=1.23",
  "python-docx>=1.1",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/tests", ".pytest_cache", ".runtime"]
